优化文章订阅时的邮件显示