@@ -9,54 +9,56 @@ import com.aurora.service.ArticleService;
 import com.aurora.service.UserInfoService;
 import com.aurora.util.EmailUtil;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import lombok.RequiredArgsConstructor;
 import org.springframework.amqp.rabbit.annotation.RabbitHandler;
 import org.springframework.amqp.rabbit.annotation.RabbitListener;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static com.aurora.constant.CommonConstant.TRUE;
 import static com.aurora.constant.RabbitMQConstant.SUBSCRIBE_QUEUE;
 
 @Component
 @RabbitListener(queues = SUBSCRIBE_QUEUE)
+@RequiredArgsConstructor
 public class SubscribeConsumer {
 
     @Value("${website.url}")
     private String websiteUrl;
 
-    @Autowired
-    private ArticleService articleService;
+    @Value("${website.name}")
+    private String websiteName;
 
-    @Autowired
-    private UserInfoService userInfoService;
+    private final ArticleService articleService;
 
-    @Autowired
-    private EmailUtil emailUtil;
+    private final UserInfoService userInfoService;
+
+    private final EmailUtil emailUtil;
 
     @RabbitHandler
     public void process(byte[] data) {
         Integer articleId = JSON.parseObject(new String(data), Integer.class);
         Article article = articleService.getOne(new LambdaQueryWrapper<Article>().eq(Article::getId, articleId));
         List<UserInfo> users = userInfoService.list(new LambdaQueryWrapper<UserInfo>().eq(UserInfo::getIsSubscribe, TRUE));
-        List<String> emails = users.stream().map(UserInfo::getEmail).collect(Collectors.toList());
+        List<String> emails = users.stream().map(UserInfo::getEmail).toList();
         for (String email : emails) {
             EmailDTO emailDTO = new EmailDTO();
             Map<String, Object> map = new HashMap<>();
+            map.put("websiteName", websiteName);
+            map.put("websiteUrl", websiteUrl);
             emailDTO.setEmail(email);
             emailDTO.setSubject("文章订阅");
             emailDTO.setTemplate("common.html");
             String url = websiteUrl + "/articles/" + articleId;
             if (article.getUpdateTime() == null) {
-                map.put("content", "花未眠的个人博客发布了新的文章，"
+                map.put("content", websiteName + "发布了新的文章，"
                         + "<a style=\"text-decoration:none;color:#12addb\" href=\"" + url + "\">点击查看</a>");
             } else {
-                map.put("content", "花未眠的个人博客对《" + article.getArticleTitle() + "》进行了更新，"
+                map.put("content", websiteName + "对《" + article.getArticleTitle() + "》进行了更新，"
                         + "<a style=\"text-decoration:none;color:#12addb\" href=\"" + url + "\">点击查看</a>");
             }
             emailDTO.setCommentMap(map);
